--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,11 @@
 
   <body>
     <h1>Socket Chat</h1>
-    <!-- Nombre -->
-    <!-- Sala -->
+
+    <form action="chat.html">
+      <input type="text" name="nombre" placeholder="nombre" />
+      <input type="text" name="sala" placeholder="sala" />
+      <button type="subtmit">Ingresar</button>
+    </form>
   </body>
 </html>
